Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_carac_ident.deca
//Mauvais caractère dans ident

cadevrait&pasmarcher
